@@ -2,18 +2,20 @@
 Hash: SHA256
 
 DIST libmng-1.0.10.tar.gz 1093337 SHA256 03a79dac9b9316d37227057614a248a946f997c4d1a3437fb569e9a63897f911 SHA512 302d792af76140d8511ac2f88b5c2a8de01261bbbcd21c83903d94d3f20f1e84a0658827e78ae863499d8f1b466c26641b714dc7e11d06366e64a9966fb18ba1 WHIRLPOOL 30bc6cf676d97e7061bb941fea91a293f613048ed789dfaefeb9777011cdff198fb3ebfb6b7dad4b1694c4db14fd396a57adb4de9e1404a0057592dd76116fbf
+DIST libmng-2.0.2.tar.xz 951844 SHA256 278c04c781e5a679c91df006fee7e71233e6f15557aef513a19fe49cd650bc50 SHA512 76ff107df43297837e075a4b57dac75ece501a57060884720a22518d9514ad0af64d69d22fe12a92d3bce3e50ae8ca3c8081680535743d2bde9ae9fa11e32687 WHIRLPOOL 33d18313d8d317ae299f45c97944f6c6074e0c6fbe16f84950a4b6315235bdb382c4dfd1abec3071ee9b548b357fe63a7ee1697a5461df2a9c38d1fdef085634
 EBUILD libmng-1.0.10-r1.ebuild 1252 SHA256 c84f9603ee826ff8d9b12d6d5f066096ae66634f3f55e9b10be03b4597e554fd SHA512 d9c837dcd45b5d80aaf226e3f33fa11548c291a4f28c1983eb625688eeed4420f0c1ce164ef8812a90cf58e29e55b50d3e75e1195c6e62641a62e69525a26bd0 WHIRLPOOL 364a9ffc8389704d9d2f4c685e2f1a7ca87345e7c981be66dd5da1e709de0ba4cfc95b07381000487ef4f264adedc8291bbb59e6f2dec99805bb9facb8617078
 EBUILD libmng-1.0.10-r2.ebuild 1480 SHA256 9e8e70bc8e04d2cf594447282edec32ca90f07052fc2abf38ad363df4ee202a9 SHA512 da2b142f556fb257507f2fd3a23c17cd993a41b3d230933497c4862e97228166c8010598487e354762f723291930b6f6d26ff3b0f89274198c421d9b698d8fb8 WHIRLPOOL 6004a1911588f02fbc0a5dc65aca09073aaac413a9c3348a21fadd4306c22fdd566b5b472c0eaf8f1697f7b5dd65a4da2b746b410dbdc8c79bcba92c526c46ad
-MISC ChangeLog 11015 SHA256 77cae6d92e6c2ea7b546b52b5d18265760f4166312e5a0b78d44fca0b069cc46 SHA512 7287d1f0f14de2dd6473eb8804ed7bb30f8443b651335be29d7acf0b2dcc10d5d6947a83f63837e8890d6028557e5bb5a7a5eec25fb76b9c23aeea7c3bf86ff1 WHIRLPOOL b85c881e7492b3ce73fc310ab99f283860f00956ee3a4612a782c5df64dae141f9c095c65588b1a1a2692a097d5772a6b814132ab96068d20724a8ecfff4da2f
+EBUILD libmng-2.0.2.ebuild 1330 SHA256 d18209c822a6ee7b458ad85e385c3990b91b86867879e29c6a0987006eaf0ced SHA512 389676b8ca07f108d67b636a016ebf5c1321921341fac0daa651890463384f8dd85ba6b43123f83f8b5412cfe1b389830b7c827d351ce90c7627449011870827 WHIRLPOOL 580f01d6f65f7c378df39900c0b5c7468ebb6e5a914eb4c27d27dba177afc14d9c043d84fd1289d125351ce91c418ce1b8e272f8bbaa82a0b237ec691283c58a
+MISC ChangeLog 11195 SHA256 ff1d33f9cd1fc8b362fbd6aedeb306808ae22f85bc6ace868e833354ef4d8f80 SHA512 d98f8c03e3408d0844ac57b4d6eb63fc02655054335b7f082540be21ed2cff813f5f0b23436a7a0a8d2f01d01431993dcd3133240c51bc3b5d9eeb200d0b434a WHIRLPOOL f131187d4d657da9d02e267af5551e328b1bbab4d2c0ef12472a6e30c022c3e0ff9f91a66017b11cfdd6ec89030deb1709798ea898f21423249728b66f60fd75
 MISC metadata.xml 161 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1 SHA512 425caf0160f1410ce7bf1d4639020be7f6335152c339edbce80676bff4166f1cab3ae9e13161c47b98dc00741dab3bfa45e9572a3314844476e480f5c2b58d7d WHIRLPOOL ad7cdd3352dbc12cb4181fb5d63b5aee5ce3a151b975c12a96c4a5c91f751736d27282ad22633c7e768230266bce5d17947735d33ef5c5c2341c3f9435b9ebb0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS5lWRAAoJEEdUh39IaPFNuJsH/1bGKdHXzZoFDuLzl9L8Elue
-e3qPAa1x+U/iGn/Cd9ktmByAuRC6OOxJyW/3Ddl/q+EioVKNtUP0PEOONMVPdYqV
-IKwlUacgEl5+I/JnnOn5v3SU67FA8OJ+gcdKtjwJXWycIQPVPkAQVqbaHNuJLCNF
-ktBbCEBTz1Y4pkm531keNHCIfEzeQX9+n8kIJFDoFVlGUlTIvn94aWlD3VpiPWFf
-6U56Yjvn53EOC8GepOUOLKuxhnNa/7atlR86Z5Qy+c0fKi++Xd4nZySDwnWMln9b
-5aSYBSzOoJ7o1kcL6QXtWv88zOf0bhlq2GdsnPs6IcwUeBOOllc4qB5oaRw+pIc=
-=EODo
+iQEcBAEBCAAGBQJS5lqaAAoJEEdUh39IaPFN+sUH/1k3QuJo7li8nnX/iTXZcTfL
+2CE0xinw1PBIjH4Ufbkdgb3+hjIPJ6ul5981dU709Nwx6rWCu36dVSIA4QdmkC2C
+5CnKHcLDDlnhH9hKj3PrHbXstKgetnfAffjguxP7hkfPs/RdFH2OSxLtKCeMbukB
+75caiYnBJ1IS8eLprArHccsLdbz2AJ0+kG8zZinIWFC+k0IyvaYNoleWLKSwZ1rw
+aFz8EeUWgADzAGhiqH3Hce/eEQx5upwdDeNyjKeE0Pp5tYls7Ihqkl+FyTl+/NJM
+8aVekVWY90fyFGRDg+U4ch8ak9c/ZlGpZ4/v0j2mrrIJ8YyHcajlSiOkpFZF3wo=
+=v+LT
 -----END PGP SIGNATURE-----
